refactored the javaScript code

--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
             <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub icon" id="github"></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt="Linkedin logo" id="linkedin"></a>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/light/github_icon.svg" alt="GitHub icon" id="github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/light/linkedin_icon.svg" alt="Linkedin logo" id="linkedin"></a>
                     </li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon" id="mail"></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/light/mail_icon.svg" alt="Mail icon" id="mail"></a></li>
                 </ul>
             </li>
-            <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
+            <li id="mode"><img src="img/light/mode.svg" alt="Mode icon" class="mode-icon"></li>
         </ul>
     </nav>
 
@@ -82,8 +82,8 @@
         
     </main>
     <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
-    <img src="img/left_illu.svg" alt="Abstract Shapes" class="left-illu" id="left-illu">
-    <img src="img/right_illu.svg" alt="Abstract Shapes" class="right-illu" id="right-illu">
+    <img src="img/light/left_illu.svg" alt="Abstract Shapes" class="left-illu" id="left-illu">
+    <img src="img/light/right_illu.svg" alt="Abstract Shapes" class="right-illu" id="right-illu">
     <script src="main.js"></script>
 </body>
 
