--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub logo" id="github"></a>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/light/github_icon.svg" alt="GitHub logo" id="github"></a>
                     </li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg"
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/light/linkedin_icon.svg"
                                 alt="Linkedin logo" id="linkedin"></a></li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon" id="mail"></a>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/light/mail_icon.svg" alt="Mail icon" id="mail"></a>
                     </li>
                 </ul>
             </li>
-            <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
+            <li id="mode"><img src="img/light/mode.svg" alt="Mode icon" class="mode-icon"></li>
         </ul>
 
     </nav>
@@ -48,9 +48,9 @@
             <a class="btn btn-primary btn-cv" href="files/Yosra_Skhiri.pdf"><span>My CV</span></a>
         </div>
         <div class="intro-img-container">
-            <img src="img/left_illu.svg" alt="Abstract Shapes" class="main-left-illu" id="left-illu">
-            <img src="img/right_illu.svg" alt="Abstract Shapes" class="main-right-illu" id="right-illu">
-            <img src="img/main_illustration.svg" alt="Computer" class="intro-img" id="computer">
+            <img src="img/light/left_illu.svg" alt="Abstract Shapes" class="main-left-illu" id="left-illu">
+            <img src="img/light/right_illu.svg" alt="Abstract Shapes" class="main-right-illu" id="right-illu">
+            <img src="img/light/main_illustration.svg" alt="Computer" class="intro-img" id="computer">
         </div>
         
     </main>
