added the min files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Yosra Skhiri - Junior Frontend Developer</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
     </main>
     <img src="img/background.svg" alt="I MAKE WEBSITES" class="bg-text">
     <p class="madeByme">made with ❤️ By <a href="https://github.com/YosraSkhiri"><u>Yosra Skhiri</u></a></p>
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
 </body>
 
 </html>
