--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,7 @@
     <title>Yosra Skhiri - Junior Frontend Developer</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
     <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
     <img src="img/light/left_illu.svg" alt="Abstract Shapes" class="left-illu" id="left-illu">
     <img src="img/light/right_illu.svg" alt="Abstract Shapes" class="right-illu" id="right-illu">
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
 </body>
 
 </html>
