--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <div class="details">
                     <h2 class="details-date">2016 - 2019</h2>
                     <div class="details-text">
-                        <h2 class="details-title">Bachelor Computer Science and Multimedia</h2>
+                        <h2 class="details-title">Bachelor in Computer Science and Multimedia</h2>
                         <p class="details-content">Manouba Higher Institute of Multimedia Arts
                         </p>
                     </div>
