--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,26 @@
                     <a href="#" onclick="return false;" class="btn btn-secondary btn-card btn-deactivated"><span>Demo</span></a>
                 </div>
             </div>
+            <div class="project-card">
+            <div class="card-img-container">
+                <img src="img/projects/eshop.png" alt="eShop" class="card-img">
+            </div>
+            <div class="card-content">
+                <h2 class="card-date">26 May 2019</h2>
+                <h1 class="card-title">eCommerce Website Template</h1>
+                <p class="card-text">
+                    An eCommerce Template made with Pug and Sass, it containes 7 pages (you can check them out in the readme file). 
+                </p>
+                <div class="tech-icons">
+                    <img src="img/tools/css.jpg" alt="CSS" title="CSS">
+                    <img src="img/tools/html5.jpg" alt="HTML5" title="HTML5">
+                    <img src="img/tools/JavaScript.jpg" alt="JavaScript" title="JavaScript">
+                </div>
+                <div class="buttons-card">
+                    <a href="https://github.com/YosraSkhiri/eCommerce-Website-Template" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="https://yosraskhiri.github.io/eCommerce-Website-Template/build/" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
         </div>
 
     </main>
