--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,27 @@
                 </div>
             </div>
     </div>
+    <div class="project-card">
+            <div class="card-img-container">
+                <img src="img/projects/bookwave.png" alt="BookWave" class="card-img">
+            </div>
+            <div class="card-content">
+                <h2 class="card-date">30 September 2020</h2>
+                <h1 class="card-title">BookWave</h1>
+                <p class="card-text">
+                    A web app for book lovers to share their thoughts and discuss books, Made with MERN (MongoDB, Expressjs, Reactjs, Nodejs) Stack. 
+                </p>
+                <div class="tech-icons">
+                    <img src="img/tools/css.jpg" alt="CSS" title="CSS">
+                    <img src="img/tools/html5.jpg" alt="HTML5" title="HTML5">
+                    <img src="img/tools/JavaScript.jpg" alt="JavaScript" title="JavaScript">
+                </div>
+                <div class="buttons-card">
+                    <a onclick="return false;" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a onclick="return false;" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+    </div>
 
     </main>
     <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
