--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
                     <img src="img/tools/JavaScript.jpg" alt="JavaScript" title="JavaScript">
                 </div>
                 <div class="buttons-card">
-                    <a onclick="return false;" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="https://github.com/YosraSkhiri/Book-App-Backend" class="btn btn-primary btn-card"><span>Code</span></a>
                     <a onclick="return false;" class="btn btn-secondary btn-card"><span>Demo</span></a>
                 </div>
             </div>
